--- a/session2/ss2bai8.html
+++ b/session2/ss2bai8.html
@@ -14,12 +14,12 @@
             <th>Xếp loại</th>
         </tr>
         <tr>
-            <td colspan="4"><b>Khóa A</b></td>
+            <td colspan="4" align="center"><b>Khóa A</b></td>
             
         </tr>
         <tr>
             <td>1</td>
-            <td>Trần Xuân Son</td>
+            <td >Trần Xuân Son</td>
             <td>7</td>
             <td>Khá</td>
         </tr>
@@ -30,7 +30,7 @@
             <td></td>
         </tr>
         <tr>
-            <td colspan="4"><b>Khóa B</b></td>
+            <td colspan="4" align="center"><b>Khóa B</b></td>
             
         </tr>
         <tr>
