--- a/session3/ss3bai1.html
+++ b/session3/ss3bai1.html
@@ -8,8 +8,8 @@
 <body>
     <h2>Form Đặt Lịch Tư Vấn Học Tập</h2>
     <form >
-        <label for="name">Họ và Tên:</label>
-        <input type="text" id="name" name="name" required>
+        <label for="1">Họ và Tên:</label>
+        <input type="text" id="1"  name="name" required>
         <br><br>
 
         <label for="date">Chọn ngày giờ:</label>
