--- a/session5/ss5bai1.html
+++ b/session5/ss5bai1.html
@@ -8,6 +8,7 @@
         header {
            background-color:#1eff29 ;
            color: black;
+           text-align: center;
         }
     </style>
 </head>
