--- a/session5/ss5bai2.html
+++ b/session5/ss5bai2.html
@@ -9,6 +9,11 @@
             background-color: #7fbaf5;
             color: white;
             font-family: 'Courier New', Courier, monospace;
+            text-align: center;
+            
+        }
+        a:link {
+            color: rgb(30, 18, 145);
         }
 
     </style>
@@ -17,7 +22,7 @@
     <header>
         <p>&COPY; 2025 Nha Khoa SmileCare. Mọi quyền được bảo lưu.</p>
     <p>Email: lienhe@nhakhoasmilecare.com</p>
-      <a href="">Facebook</a> | <a href="">Instagram</a> | <a href="">Zalo</a>
+      <a href="https://onthi.pttc1.edu.vn/m2/index.html">Facebook</a> | <a href="https://onthi.pttc1.edu.vn/m2/index.html">Instagram</a> | <a href="https://onthi.pttc1.edu.vn/m2/index.html">Zalo</a>
       <del></del>
     
     </header>
