--- a/session3/ss3bai3.html
+++ b/session3/ss3bai3.html
@@ -6,62 +6,68 @@
     <title>Document</title>
 </head>
 <body>
-       <form action="" method="post">
-        <table cellpadding="6" cellspacing="0" border="0">
+      <form >
+        <table>
             <tr>
-                <td>Họ và Tên:</td>
-                <td><input type="text" name="name" required></td>
+                <td><label for="1">Họ và tên:</label></td>
+                <td><input type="text" id="1"></td>
             </tr>
             <tr>
-                <td >Email:</td>
-                <td><input type="email" name="mail" required></td>
+                <td><label for="2">Email</label></td>
+                <td><input type="email"  id="2"></td>
             </tr>
             <tr>
-                <td >Ngày sinh:</td>
-                <td><input type="date" name="date" required></td>
+                <td><label for="3">Ngày sinh</label></td>
+                <td><input type="date"></td>
             </tr>
             <tr>
-                <td >Giới tính:</td>
+                <td><label >Giới tính:</label></td>
                 <td>
-                    <input type="radio" id="male" name="gender" value="male"> <label for="male">Nam</label>
-                    <input type="radio" id="female" name="gender" value="female"> <label for="female">Nữ</label>
-                </td>
+                    <input type="radio" value="nam" name="sex" id="4">
+                    <label for="4">Nam</label>
+                   
+                    <input type="radio" value="nữ" name="sex" id="5">
+                     <label for="5">Nữ</label>
+            </td>
             </tr>
             <tr>
-                <td>Số điện thoại:</td>
-                <td><input type="tel" name="phone" required></td>
+                <td><label for="6">Số điện thoại:</label></td>
+                <td><input type="number"></td>
             </tr>
             <tr>
-                <td>Chuyên ngành:</td>
-                <td><input type="text" name="major" required></td>
+                <td><label for="7">Chuyên ngành:</label></td>
+                <td><input type="text" id="7"></td>
             </tr>
             <tr>
-                <td>Năm nhập học:</td>
-                <td><input type="number" name="year" style="width:100px" required></td>
+                <td><label for="8">Năm nhập học:</label></td>
+                <td><input type="number" id="8"></td>
             </tr>
             <tr>
-                <td>Điểm GPA:</td>
-                <td><input type="number" name="gpa" step="0.1" style="width:100px" required></td>
+                <td><label for="9">Điểm GPA</label></td>
+                <td><input type="text" ></td>
             </tr>
             <tr>
-                <td>Địa chỉ:</td>
-                <td><textarea name="address" rows="2" cols="40" required></textarea></td>
+                <td><label for="10">Địa chỉ:</label></td>
+                <td><textarea id="10" rows="2" cols="30"></textarea></td>
             </tr>
             <tr>
-                <td>Lớp học:</td>
+                <td><label for="11">Lớp học:</label></td>
                 <td>
-                    <select name="classroom" required>
-                        <option value="class1">Lớp 1</option>
-                        <option value="class2">Lớp 2</option>
+                    <select>
+                        <option >Lớp 1</option>
                     </select>
                 </td>
             </tr>
             <tr>
-                <td>Ngày đăng ký học:</td>
-                <td><input type="datetime-local" name="note" required></td>
+                <td><label for="12">Ngày đăng ký học:</label></td>
+                <td><input type="datetime-local"></td>
+            </tr>
+            <tr>
+                <td><input type="submit" value="Gửi thông tin"></td>
+                
             </tr>
         </table>
-        <input type="submit" value="Gửi thông tin">
-    </form>
+
+      </form> 
 </body>
 </html>
