--- a/session5/ss5bai3.html
+++ b/session5/ss5bai3.html
@@ -7,6 +7,7 @@
     <style>
         body {
             background-color:#f4f4f9 ;
+            font-family: 'Times New Roman', Times, serif;
         }
         h1 {
             color: #1e90ff;
