--- a/session6/mntest.html
+++ b/session6/mntest.html
@@ -21,6 +21,7 @@
             
              background-color: #78350f;
             color:white;
+            text-align: center;
 
          }
          li:hover {
