--- a/session7/ss7bai3.html
+++ b/session7/ss7bai3.html
@@ -17,7 +17,7 @@
          .doctor p:first-child {
             color: rgb(255, 115, 0);
             font-weight: bold;
-            font-size: 20px;
+            font-size: 30px;
         }
         .doctor p:nth-of-type(2) {
             font-size: 26px;
@@ -26,7 +26,7 @@
         }
         .doctor p:nth-of-type(3) {
             color: #1eff29;
-            font-size: 20px;
+            font-size: 30px;
             font-weight: bold;
         }
 
@@ -40,7 +40,7 @@
 </head>
 <body>
     <div class="doctor">
-        <p>NHA SĨ NỔI BẬT</p>
+        <p> ⭐NHA SĨ NỔI BẬT</p>
         <img src="a3.png" alt="ảnh nha sĩ">
         <p>BS.Nguyễn Minh Tâm</p>
         <p>Nha khoa thẩm mỹ</p>
