--- a/session7/btth.html
+++ b/session7/btth.html
@@ -46,7 +46,7 @@
         h2 {
             font-size: 40px;
         }
-        #end {
+        .end {
             border: 4px solid rgb(255, 255, 255);
             width: 90%;
             height: 200px;
@@ -61,8 +61,8 @@
         h3 {
             font-size: 30px;
         }
-        #end :hover {
-             transform: translateY(-50px);
+        .end :hover {
+             transform: translateY(-5px);
         }
     </style>
 </head>
@@ -87,7 +87,7 @@
     <h2>Dịch vụ nổi bật</h2>
    <p>Giải pháp tối ưu cho sức khỏe răng miệng và thẩm mỹ nụ cười.</p>
    </div>
-   <div id="end">
+   <div class="end">
     <h3>Cạo vôi - Đánh bóng</h3>
     <p>Làm sạch mảng bám, hạn chế viêm nướu, hơi thở thơm mát.</p>
     <ul>
